Changed site to use menu option 2a

--- a/menu2a.html
+++ b/menu2a.html
@@ -128,6 +128,38 @@
             <li class="dropdown">
               <a href="#" data-toggle="collapse" data-target="#four">People, Population and Community</a>
             </li>
+
+
+
+            <li><a href="#">Release Calendar</a></li>
+            
+            <li class="dropdown menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b> </a>
+                  <ul class="dropdown-menu megamenu row">
+                    <li class="col-sm-12">
+                        <ul>
+                            <li class="dropdown-header">Themes</li>
+                            <li><a class="" href="index.html">Home</a></li>
+                            <li><a class="" href="economy.html">Economy</a></li>
+                            <li><a class="" href="inflation.html">Inflation</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="col-sm-12">
+                        <ul>
+                            <li class="dropdown-header">Bulletin</li>
+                            <li><a href="release.html">Release</a></li>
+                            <li><a href="slice.html">Slice</a></li>
+                            <li><a href="summary.html">Summary</a></li>
+                            <li><a href="bulletin.html">Bulletin</a></li>
+                            <li><a href="supplementary.html">Supplementary</a></li>
+                            <li><a href="observation.html">Observation</a></li>
+                        </ul>
+                    </li>
+
+                  </ul>
+            </li>
+            
           </ul>
         </nav>
 
@@ -188,6 +220,9 @@
 
                   </ul>
             </li>
+
+
+
           </ul>
 
         </nav>
