--- a/regional.html
+++ b/regional.html
@@ -514,30 +514,39 @@
 
 
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-6">
       <h2>Population Pyramid</h2>
       <div id='pyramid' class='chart'>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-6">
       <h2 id="popPyramid2">Population Pyramid</h2>
       <div id='pyramid2' class='chart'>
       </div>
     </div>
-    <div class="col-sm-4">
-      <h2 id="popComparison">Population Comparison</h2>
+  </div>
+
+
+  <div class="row">
+    <h2 id="comparison">Direct Comparison</h2>
+    <div id='compaironsBar' class='chart'>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <h2 id="popComparison">Population Comparison</h2>
+    <div class="col-sm-6">
       <div id='stackedBar' class='chart'>
+      </div>
+    </div>
+    <div class="col-sm-6">
+
+      <div id='stackedBar2' class='chart'>
       </div>
     </div>
   </div>
 
-<!-- 
-  <div class="row">
-    <h2 id="popComparison">Population Comparison</h2>
-    <div id='stackedBar' class='chart'>
-    </div>
-  </div>
- -->
 
   <div class="row">
     <h2 id="popTrend">Population Trend 2001 to 2013</h2>
