--- a/regional.html
+++ b/regional.html
@@ -529,7 +529,7 @@
 
   <div class="row">
     <h2 id="comparison">Direct Comparison</h2>
-    <div id='compaironsBar' class='chart'>
+    <div id='comparisonsBar' class='chart'>
     </div>
   </div>
 
