--- a/regional.html
+++ b/regional.html
@@ -29,7 +29,7 @@
     height:200px;
   }
   #map{
-    height:440px;
+    height:620px;
   }
   /* CHART: tooltip side bar */
   .sidebar {
@@ -401,7 +401,7 @@
 
       <div class="row">
       <div id="" class="col-sm-8">
-        <span id="name"></span>
+        <span id="name">&nbsp;</span>
       </div>
       <div id="" class="col-sm-4">
         <span id="pop"></span>
@@ -410,7 +410,7 @@
       <br/>
       <div class="row">
       <div id="" class="col-sm-8">
-        <span id="parent_name"></span>
+        <span id="parent_name">&nbsp;</span>
       </div>
       <div id="" class="col-sm-4">
         <span id="parent_pop"></span>
@@ -419,7 +419,7 @@
       <br/>
       <div class="row">
       <div id="" class="col-sm-8">
-        <span id="gparent_name"></span>
+        <span id="gparent_name">&nbsp;</span>
       </div>
       <div id="" class="col-sm-4">
        <span id="gparent_pop"></span>
@@ -428,7 +428,7 @@
       <br/>
       <div class="row">
       <div id="" class="col-sm-8">
-        <span id="ancestor_name"></span>
+        <span id="ancestor_name">&nbsp;</span>
       </div>
       <div id="" class="col-sm-4">
         <span id="ancestor_pop"></span>
