--- a/regional.html
+++ b/regional.html
@@ -709,7 +709,8 @@
 
 
 <script src="js/areas.js"></script>
-<script src="js/mapping.js"></script>
+<script src="js/loadGeoJson.js"></script>
+<!-- <script src="js/mapping.js"></script> -->
 <script src="js/jspostcode.js"></script>
 <script src="js/loader.js"></script>
 
