--- a/regional.html
+++ b/regional.html
@@ -403,7 +403,7 @@
       <div id="" class="col-sm-8">
         <span id="name">&nbsp;</span>
       </div>
-      <div id="" class="col-sm-4">
+      <div id="" class="col-sm-4 text-right">
         <span id="pop"></span>
       </div>
       </div>
@@ -412,7 +412,7 @@
       <div id="" class="col-sm-8">
         <span id="parent_name">&nbsp;</span>
       </div>
-      <div id="" class="col-sm-4">
+      <div id="" class="col-sm-4 text-right">
         <span id="parent_pop"></span>
       </div>
       </div>
@@ -421,7 +421,7 @@
       <div id="" class="col-sm-8">
         <span id="gparent_name">&nbsp;</span>
       </div>
-      <div id="" class="col-sm-4">
+      <div id="" class="col-sm-4 text-right">
        <span id="gparent_pop"></span>
       </div>
       </div>
@@ -430,7 +430,7 @@
       <div id="" class="col-sm-8">
         <span id="ancestor_name">&nbsp;</span>
       </div>
-      <div id="" class="col-sm-4">
+      <div id="" class="col-sm-4 text-right">
         <span id="ancestor_pop"></span>
       </div>
       </div>
@@ -464,7 +464,7 @@
 
 
 
-
+<!-- 
   <div class="row">
     <h2 id="comparison">Area Comparisons</h2>
 
@@ -472,7 +472,7 @@
     <div id='comparisonsBar' class='chart'>
     </div>
   </div>
-
+ -->
 
   <div class="row">
     <h2 id="age">Age Comparisons</h2>
@@ -521,13 +521,13 @@
   </div>
 
 
-
+<!-- 
   <div class="row">
     <h2 id="popTable">Population Table</h2>
     <div id='table' class='chart'>
     </div>
   </div>
-
+ -->
 
 
   <div class="row shim">
@@ -536,107 +536,6 @@
 
 
 
-  <div class="row">
-    <h2 id="title">Demographics</h2>
-    <div id='bar' class='box'>
-      <div class="row">
-        <div class="col-sm-4">
-
-          <h3>Population: <strong><span id="pop2012" class="headline"></span></strong>
-          </h3>
-          <div class="row">
-
-            <div class="col-sm-6">
-              2011:<br/>
-              Area:<br/>
-              Density:<br/>
-              <span class="fa-stack fa-lg pull-left">
-                  <i class="fa fa-square fa-stack-2x"></i>
-                  <i id="popdirection" class="fa fa-stack-1x fa-inverse"></i>
-                </span>
-            </div>
-
-            <div class="col-sm-6">
-              <strong><span id="pop2011"></span></strong><br/>
-              <strong><span id="area"></span></strong><br/>
-              <strong><span id="density"></span></strong><br/> people per km2
-              <br/>
-
-            </div>
-
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h3>Gender</h3>
-          <div id='genderChart' class='piechart'>
-
-
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h3>Age Groups</h3>
-          <div id='ageChart' class='piechart'>
-
-
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4">
-          <h3>Natural Changes<span class="fa-stack fa-lg pull-right">
-                  <i class="fa fa-square fa-stack-2x"></i>
-                  <i id="changedirection" class="fa  fa-stack-1x fa-inverse"></i>
-                </span></h3>
-          <span class="title">Births: </span><span id="births"></span><br/>
-          <span class="title">Deaths: </span><span id="deaths"></span><br/>
-          <span class="title">Natural Change: </span><span id="natural" class="headline"></span><br/>
-
-
-        </div>
-        <div class="col-sm-4">
-          <h3>Migration within UK <span class="fa-stack fa-lg pull-right">
-                  <i class="fa fa-square fa-stack-2x"></i>
-                  <i id="ukdirection" class="fa fa-stack-1x fa-inverse"></i>
-                </span></h3>
-          <span class="title">In: </span><span id="uk_in"></span><br/>
-          <span class="title">Out: </span><span id="uk_out"></span><br/>
-          <span class="title">Net: </span><span id="uk_net" class="headline"></span><br/>
-
-
-        </div>
-        <div class="col-sm-4">
-          <h3>International Migration <span class="fa-stack fa-lg pull-right">
-                  <i class="fa fa-square fa-stack-2x "></i>
-                  <i id="nationaldirection" class="fa fa-stack-1x fa-inverse"></i>
-                </span>
-          </h3>
-          <span class="title">In: </span><span id="in"></span><br/>
-          <span class="title">Out: </span><span id="out"></span><br/>
-          <span class="title">Net: </span><span id="net" class="headline"></span><br/>
-
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12">
-          <br/>
-          Uses data from 2013 release:
-          MYE3_population_change_for_local_authorities_UK.xls
-        </div>
-      </div>
-
-
-    </div>
-  </div>
-
-
-
-
-
-
-
-</div>
 <!--  END PAGE BODY  -->
 
 
